About page fix 2

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ permalink: /about/
 
 <div class="break" style="height:200px"> </div>
 
-<img src="/assets/about_icon.png" class="aboutPageIcon">
+<img src="{{site.baseurl}}/assets/about_icon.png" class="aboutPageIcon">
 
 <div class="artPageText" style="font-size:50px; padding-top:20px">I'M CASPAR</div>
 <div class="artPageText" style="font-size:25px; padding-top:5px">Just a pile of ghosts. I do art for fun.</div>
