--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ permalink: /about/
 
 <div class="artPageText" style="font-size:50px; padding-top:20px">I'M CASPAR</div>
 <div class="artPageText" style="font-size:25px; padding-top:5px">Just a pile of ghosts. I do art for fun.</div>
-<div class="artPageText" style="font-size:20px; padding-top:5px">they/their</div>
+<div class="artPageText" style="font-size:20px; padding-top:5px">they/it</div>
 
 <!--<div class="break" style="height:30px"> </div>
 <div class="textContainer">
