--- a/about.html
+++ b/about.html
@@ -20,6 +20,9 @@ permalink: /about/
 
 <div class="break" style="height:30px"> </div>
 <div class="artPageText" style="font-size:20px">Please don't repost my art anywhere.</div>
-<div class="artPageText" style="font-size:20px">I don't take commission work at the moment.</div>
+
+<div class="break" style="height:30px"> </div>
+<div class="artPageText" style="font-size:18px">Want to get in touch?</div>
+<div class="artPageText" style="font-size:15px">hello@ghosttyrant.co.uk</div>
 
 <div class="break" style="height:30px"> </div>
