--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ permalink: /about/
 </div>-->
 
 <div class="break" style="height:30px"> </div>
-<div class="artPageText" style="font-size:20px">Please don't repost my art anywhere.</div>
+<div class="artPageText" style="font-size:18px">Do not repost my art.<br>Do not sell my art.<br>Thanks :)</div>
 
 <div class="break" style="height:30px"> </div>
 <div class="artPageText" style="font-size:18px">Want to get in touch?</div>
