--- a/about.html
+++ b/about.html
@@ -10,16 +10,11 @@ permalink: /about/
 <img src="{{site.baseurl}}/assets/about_icon.png" class="aboutPageIcon">
 
 <div class="artPageText" style="font-size:50px; padding-top:20px">I'M CASPAR</div>
-<div class="artPageText" style="font-size:25px; padding-top:5px">Just a pile of ghosts. I do art for fun.</div>
+<div class="artPageText" style="font-size:25px; padding-top:5px">Just a pile of ghosts</div>
 <div class="artPageText" style="font-size:20px; padding-top:5px">they/it</div>
 
-<!--<div class="break" style="height:30px"> </div>
-<div class="textContainer">
-<div class="artPageText" style="font-size:20px">About me? I'm just ghosts.</div>
-</div>-->
-
 <div class="break" style="height:30px"> </div>
-<div class="artPageText" style="font-size:18px">Do not repost my art.<br>Do not sell my art.<br>Thanks :)</div>
+<div class="artPageText" style="font-size:18px; padding-top:5px">Artist / Gamedev / Poltergeist<br>I make stuff for fun and freelance.<br>Do not repost or sell my stuff.<br>Thanks :)</div>
 
 <div class="break" style="height:30px"> </div>
 <div class="artPageText" style="font-size:18px">Want to get in touch?</div>
