Removed blog / Updated about icon / Updated footer dates

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ permalink: /about/
 <div class="artPageText" style="font-size:20px; padding-top:5px">they/it</div>
 
 <div class="break" style="height:30px"> </div>
-<div class="artPageText" style="font-size:18px; padding-top:5px">Artist / Gamedev / Poltergeist<br>I make stuff for fun and freelance.<br>Do not repost or sell my stuff.<br>Thanks :)</div>
+<div class="artPageText" style="font-size:18px; padding-top:5px">Artist / Gamedev / Poltergeist<br>Do not repost or sell my stuff<br>Thanks :]</div>
 
 <div class="break" style="height:30px"> </div>
 <div class="artPageText" style="font-size:18px">Want to get in touch?</div>
