2026 Overhaul / Palette update, font update, some other layout and asset updates

--- a/about.html
+++ b/about.html
@@ -9,15 +9,15 @@ permalink: /about/
 
 <img src="{{site.baseurl}}/assets/about_icon.png" class="aboutPageIcon">
 
-<div class="artPageText" style="font-size:50px; padding-top:20px">I'M CASPAR</div>
+<div class="artPageTitle" style="font-size:50px; padding-top:20px">I'M CASPAR</div>
 <div class="artPageText" style="font-size:25px; padding-top:5px">Just a pile of ghosts</div>
-<div class="artPageText" style="font-size:20px; padding-top:5px">they/it</div>
+<div class="artPageText" style="font-size:20px; padding-top:5px; color:#e74aff;">they/it</div>
 
 <div class="break" style="height:30px"> </div>
 <div class="artPageText" style="font-size:18px; padding-top:5px">Artist / Gamedev / Poltergeist<br>Do not repost or sell my stuff<br>Thanks :]</div>
 
 <div class="break" style="height:30px"> </div>
 <div class="artPageText" style="font-size:18px">Want to get in touch?</div>
-<div class="artPageText" style="font-size:15px">hello@ghosttyrant.co.uk</div>
+<div class="artPageText" style="font-size:15px; color:#e74aff;">hello@ghosttyrant.co.uk</div>
 
 <div class="break" style="height:30px"> </div>
